Bug 402161 - "moz_places_visitcount index is bad in some profiles" [p=mak77@supereva.it (Marco Bonardo [mak77]) r=dietrich a=blocking-firefox3+]